@@ -91,32 +91,20 @@ src/DocumentSystem.h
 src/Encodings.cc
 src/Encodings.h
 src/Error.h
-src/formats/SubtitleASS.cc
-src/formats/SubtitleASS.h
-src/formats/SubtitleEditorProject.cc
+src/FileReader.cc
+src/FileReader.h
+src/FileWriter.cc
+src/FileWriter.h
+src/formats/AdobeEncoreDVD.h
+src/formats/AdvancedSubStationAlpha.h
+src/formats/MicroDVD.h
+src/formats/MPL2.h
+src/formats/MPsub.h
+src/formats/SubRip.h
+src/formats/SubStationAlpha.h
 src/formats/SubtitleEditorProject.h
-src/formats/SubtitleEncoreNTSC.cc
-src/formats/SubtitleEncoreNTSC.h
-src/formats/SubtitleEncorePAL.cc
-src/formats/SubtitleEncorePAL.h
-src/formats/SubtitleMicroDVD.cc
-src/formats/SubtitleMicroDVD.h
-src/formats/SubtitleMPL2.cc
-src/formats/SubtitleMPL2.h
-src/formats/SubtitleMPsub.cc
-src/formats/SubtitleMPsub.h
-src/formats/SubtitleSSA.cc
-src/formats/SubtitleSSA.h
-src/formats/SubtitleSubRip.cc
-src/formats/SubtitleSubRip.h
-src/formats/SubtitleSubViewer2.cc
-src/formats/SubtitleSubViewer2.h
-src/formats/SubtitleText.cc
-src/formats/SubtitleText.h
-src/formats/SubtitleTimedText.cc
-src/formats/SubtitleTimedText.h
-src/formats/SubtitleTTXT.cc
-src/formats/SubtitleTTXT.h
+src/formats/SubViewer2.h
+src/formats/TimedTextAuthoringFormat1.h
 src/gui/Application.cc
 src/gui/Application.h
 src/gui/ComboBoxEncoding.cc
@@ -163,14 +151,15 @@ src/Subtitle.cc
 src/SubtitleEditorWindow.cc
 src/SubtitleEditorWindow.h
 src/SubtitleFormat.cc
+src/SubtitleFormatFactory.h
 src/SubtitleFormat.h
+src/SubtitleFormatSystem.cc
+src/SubtitleFormatSystem.h
 src/Subtitle.h
 src/SubtitleModel.cc
 src/SubtitleModel.h
 src/Subtitles.cc
 src/Subtitles.h
-src/SubtitleSystem.cc
-src/SubtitleSystem.h
 src/SubtitleTags.cc
 src/SubtitleTags.h
 src/SubtitleTime.cc
@@ -181,7 +170,6 @@ src/TimeUtility.cc
 src/TimeUtility.h
 src/unittest/testColor.cc
 src/unittest/testRegEx.cc
-src/unittest/testSubtitleLoaders.cc
 src/unittest/testSubtitleTime.cc
 src/unittest/unittest.cc
 src/utility.cc
