@@ -1,3 +1,9 @@
+2008-10-10  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	* subtitleeditor.pot:
+	Update with last files and messages.
+
 2008-10-06  kitone  <kitone@gna.org>
 
 	* fr.po:
